@@ -59,7 +59,7 @@ class OneStatementPerLineDiagnosticTest extends AbstractDiagnosticTest<OneStatem
     assertThat(diagnostics, true)
       .hasRange(1, 5, 1, 9)
       .hasRange(1, 10, 1, 14);
-    assertThat(diagnostics.get(0).getRelatedInformation()).hasSize(1);
+    assertThat(diagnostics.getFirst().getRelatedInformation()).hasSize(1);
   }
 
   @Test
@@ -67,7 +67,7 @@ class OneStatementPerLineDiagnosticTest extends AbstractDiagnosticTest<OneStatem
 
     List<Diagnostic> diagnostics = getDiagnostics();
     List<CodeAction> quickFixes = getQuickFixes(
-      diagnostics.get(0),
+      diagnostics.getFirst(),
       Ranges.create(12, 5, 12, 9)
     );
 
@@ -77,11 +77,11 @@ class OneStatementPerLineDiagnosticTest extends AbstractDiagnosticTest<OneStatem
       .matches(codeAction -> codeAction.getKind().equals(CodeActionKind.QuickFix))
 
       .matches(codeAction -> codeAction.getDiagnostics().size() == 1)
-      .matches(codeAction -> codeAction.getDiagnostics().get(0).equals(diagnostics.get(0)))
+      .matches(codeAction -> codeAction.getDiagnostics().getFirst().equals(diagnostics.getFirst()))
 
       .matches(codeAction -> codeAction.getEdit().getChanges().size() == 1)
       .matches(codeAction ->
-        codeAction.getEdit().getChanges().get(FAKE_DOCUMENT_URI.toString()).get(0).getNewText().startsWith("\n")
+        codeAction.getEdit().getChanges().get(FAKE_DOCUMENT_URI.toString()).getFirst().getNewText().startsWith("\n")
       );
   }
 }
