@@ -89,7 +89,7 @@ class FormatProviderTest {
     // then
     assertThat(textEdits).hasSize(1);
 
-    TextEdit textEdit = textEdits.get(0);
+    TextEdit textEdit = textEdits.getFirst();
     assertThat(textEdit.getNewText()).isEqualTo(formattedFileContent);
   }
 
@@ -114,7 +114,7 @@ class FormatProviderTest {
     // then
     assertThat(textEdits).hasSize(1);
 
-    TextEdit textEdit = textEdits.get(0);
+    TextEdit textEdit = textEdits.getFirst();
     assertThat(textEdit.getNewText()).isEqualTo(formattedFileContent);
 
   }
@@ -142,7 +142,7 @@ class FormatProviderTest {
     // then
     assertThat(textEdits).hasSize(1);
 
-    TextEdit textEdit = textEdits.get(0);
+    TextEdit textEdit = textEdits.getFirst();
     assertThat(textEdit.getNewText()).isEqualTo(formattedFileContent);
   }
 
@@ -170,7 +170,7 @@ class FormatProviderTest {
     // then
     assertThat(textEdits).hasSize(1);
 
-    TextEdit textEdit = textEdits.get(0);
+    TextEdit textEdit = textEdits.getFirst();
     assertThat(textEdit.getNewText()).isEqualTo(formattedFileContent);
   }
 
@@ -196,7 +196,7 @@ class FormatProviderTest {
     // then
     assertThat(textEdits).hasSize(1);
 
-    TextEdit textEdit = textEdits.get(0);
+    TextEdit textEdit = textEdits.getFirst();
     assertThat(textEdit.getNewText()).isEqualTo(fileContent);
   }
 
@@ -226,7 +226,7 @@ class FormatProviderTest {
     // then
     assertThat(textEdits).hasSize(1);
 
-    TextEdit textEdit = textEdits.get(0);
+    TextEdit textEdit = textEdits.getFirst();
     assertThat(textEdit.getNewText()).isEqualTo(formattedFileContent);
   }
 
@@ -252,7 +252,7 @@ class FormatProviderTest {
     // then
     assertThat(textEdits).hasSize(1);
 
-    TextEdit textEdit = textEdits.get(0);
+    TextEdit textEdit = textEdits.getFirst();
     assertThat(textEdit.getNewText()).isEqualTo(formattedFileContent);
   }
 
@@ -275,7 +275,7 @@ class FormatProviderTest {
 
     // then
     assertThat(textEdits).hasSize(1);
-    assertThat(textEdits.get(0).getNewText()).isEqualTo("Возврат -1 > -2");
+    assertThat(textEdits.getFirst().getNewText()).isEqualTo("Возврат -1 > -2");
 
   }
 
